Make clustering notebook more readable

--- a/TED_NLP_Clustering.ipynb
+++ b/TED_NLP_Clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TED Talks Natural Language Processing\n",
+    "# TED Talks Unsupervised Topic Clustering\n",
     "A Clustering Based Method to Extract Topics and Deeper Insights from Ted Talk Transcripts"
    ]
   },
@@ -27,7 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Download stopwords\n",
-    "# nltk.download('stopwords')\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "# Configure display\n",
     "pd.options.display.max_rows = 1000\n",
@@ -392,9 +392,13 @@
     }
    ],
    "source": [
+    "# Join to combine transcript with other data from main ted dataframe\n",
     "ted = ted_main.merge(ted_transcripts, left_on='url', right_on='url', how='outer')\n",
+    "\n",
+    "# Drop anything with NaN,\n",
     "ted = ted.dropna()\n",
     "\n",
+    "# Clear unneeded larger variable\n",
     "del ted_main, ted_transcripts\n",
     "\n",
     "display(ted.head(2))"
@@ -421,6 +425,7 @@
     }
    ],
    "source": [
+    "# Get stopwords and print sample\n",
     "stopwords = nltk.corpus.stopwords.words('english')\n",
     "print(stopwords[0:10])"
    ]
@@ -431,6 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stemmer\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "stemmer = SnowballStemmer(\"english\")"
    ]
@@ -468,6 +474,13 @@
     "        if re.search('[a-zA-Z]', token):\n",
     "            filtered_tokens.append(token)\n",
     "    return filtered_tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply Stemmer to Title"
    ]
   },
   {
@@ -954,10 +967,11 @@
     }
    ],
    "source": [
+    "# Sanity check to ensure data isnt duplicate\n",
     "display(ted.iloc[[0]])\n",
     "display(ted.iloc[[663]])\n",
     "display(ted.iloc[[1418]])\n",
-    "display(ted.iloc[[1409]])\n"
+    "display(ted.iloc[[1409]])"
    ]
   },
   {
@@ -977,6 +991,8 @@
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
+    "# Number was experimented to 8. Anything > 8 yeilds not enough distinction, and < 8, there is still room for... \n",
+    "# ...distinction within topics \n",
     "k_clusters = 8\n",
     "\n",
     "km = KMeans(n_clusters=k_clusters)\n",
@@ -993,10 +1009,10 @@
     "from sklearn.externals import joblib\n",
     "\n",
     "# Line below allows us to save our model\n",
-    "# joblib.dump(km, 'doc_cluster_transcript.pkl')\n",
+    "joblib.dump(km, 'doc_cluster_transcript.pkl')\n",
     "\n",
     "# Line below allows us to load a saved model\n",
-    "km = joblib.load('doc_cluster_transcript.pkl')\n",
+    "# km = joblib.load('doc_cluster_transcript.pkl')\n",
     "\n",
     "clusters = km.labels_.tolist()"
    ]
@@ -1079,7 +1095,7 @@
     }
    ],
    "source": [
-    "# Comparing clusters with views\n",
+    "# Average number of views per clusters\n",
     "grouped = ted_clustered['views'].groupby(ted_clustered['cluster'])\n",
     "\n",
     "grouped.mean()"
